# python-trading-rag-assistant

./: CHANGELOG.md  DECISIONS.md  PROJECT_CONTEXT.md  README.md  TASKS.md  pyproject.toml  requirements.txt
calisma/: CHANGELOG.md  DECISIONS.md  TASKS.md  pyproject.toml
calisma/data/sample/: sample_strategy_notes.txt
calisma/src/trading_rag_assistant/: chunker.py  cleaner.py  loader.py  pipeline.py
calisma/tests/: test_cleaner.py  test_pipeline.py
data/evaluation/: retrieval_testset.json
data/sample/: market_structure_notes.md  risk_management_notes.md
docs/: 00_proje_fikri.md  01_ilk_notlar.md  02_metin_on_isleme.md  03_semantic_retrieval.md  04_kaynakli_cevap_uretimi.md  05_coklu_belge_ve_kalite_kontrolu.md  06_calistirma_ve_demo.md
scripts/: ask_documents.py  ask_sample.py  evaluate_retrieval.py  index_documents.py  index_sample.py  reset_index.py  run_preprocessing.py  search_sample.py
src/trading_rag_assistant/: __init__.py  answer_schema.py  citations.py  config.py  documents.py  embeddings.py  indexer.py  llm_client.py  prompting.py  query_engine.py  retriever.py  schemas.py  vector_store.py
src/trading_rag_assistant/evaluation/: __init__.py  dataset.py  retrieval_metrics.py
tests/: test_chunker.py  test_citations.py  test_documents.py  test_indexer.py  test_llm_client.py  test_loader.py  test_prompting.py  test_query_engine.py  test_retrieval_metrics.py  test_retriever.py
