[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "python-trading-rag-assistant"
version = "0.4.0"
description = "Trading dokümanları için kaynak dayanaklı Python RAG araştırma projesi"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0,<2.0",
    "sentence-transformers>=5.0,<6.0",
    "groq>=0.33,<2.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
